<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterProgramActivity"
    tools:showIn="@layout/register_program_activity">

    <RelativeLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/White">

        <!--First Step-->
        <android.support.v7.widget.CardView
            android:id="@+id/firstStepContainer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/btnAcceptLicence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRegisterFirstStep"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Second Step-->
        <android.support.v7.widget.CardView
            android:id="@+id/secondStepContainer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnValidData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/dark_green"
                    android:text="@string/btnValidData"
                    android:textColor="@color/White"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnInvalidData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/red"
                    android:text="@string/btnInvalidData"
                    android:textColor="@color/White"
                    android:textSize="13sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Third Step-->
        <android.support.v7.widget.CardView
            android:id="@+id/thirdStepContainer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSubmitRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btnSubmitRegister"
                    android:textColor="@color/White"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Fourth Step-->
        <android.support.v7.widget.CardView
            android:id="@+id/fourthStepContainer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnNewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btnNewRegister"
                    android:textColor="@color/White"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btnClose"
                    android:textColor="@color/White"
                    android:textSize="13sp" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/registerContainerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomContainer" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottomContainer"
        android:background="@color/background_blue_darker" />
</RelativeLayout>


