<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <!--Logo-->
        <LinearLayout
            android:id="@+id/logo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <!--Login-->
        <LinearLayout
            android:id="@+id/login_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_container"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            android:weightSum="1">

            <!--Email-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_identity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_identity"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/grey_0" />

            </android.support.design.widget.TextInputLayout>

            <!--Password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_phone"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/grey_0" />
            </android.support.design.widget.TextInputLayout>

            <!--Login Button-->
            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/grey_0"
                android:textSize="16sp"/>
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>